force-app/main/default/objects/TruSculpt__c/TruSculpt__c.object-meta.xml
<CustomObject>
    <label>TruSculpt</label>
    <nameField>
        <label>TruSculpt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TruSculpt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>