force-app/main/default/objects/TruSculpt__c/fields/Average_tuning__c.field-meta.xml
<CustomField>
    <fullName>Average_tuning__c</fullName>
    <label>Average tuning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>