force-app/main/default/objects/TruSculpt__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>TruSculpt</relationshipLabel>
    <relationshipName>TruSculpt</relationshipName>
    <type>Lookup</type>
</CustomField>