force-app/main/default/objects/TruSculpt__c/fields/Employee_hook_up_initials__c.field-meta.xml
<CustomField>
    <fullName>Employee_hook_up_initials__c</fullName>
    <label>Employee hook-up initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>