force-app/main/default/objects/TruSculpt__c/fields/Employee_mid_point_initials__c.field-meta.xml
<CustomField>
    <fullName>Employee_mid_point_initials__c</fullName>
    <label>Employee mid point initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>