force-app/main/default/objects/TruSculpt__c/fields/Hydration_level__c.field-meta.xml
<CustomField>
    <fullName>Hydration_level__c</fullName>
    <label>Hydration level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>