force-app/main/default/objects/TruSculpt__c/fields/Post_Treatment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Treatment_Notes__c</fullName>
    <label>Post Treatment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>