force-app/main/default/objects/TruSculpt__c/fields/Power_used__c.field-meta.xml
<CustomField>
    <fullName>Power_used__c</fullName>
    <label>Power used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>